apps/99-test/whoami/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: whoami
  labels:
    goldilocks.fairwinds.com/enabled: "true"
    pod-security.kubernetes.io/enforce: baseline
