apps/99-test/whoami/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  labels:
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
        vixens.io/sizing.whoami: "V-nano"
      annotations:
        vixens.io/nometrics: "true"
        vixens.io/fast-start: "true"
        vixens.io/no-long-connections: "true"
        goldilocks.fairwinds.com/enabled: "true"
        autoscaling.k8s.io/vpa: "true"
    spec:
      priorityClassName: vixens-medium
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      containers:
        - name: whoami
          resources:
            requests:
              cpu: 5m
              memory: 64Mi
            limits:
              cpu: 20m
              memory: 256Mi
          image: traefik/whoami:v1.12.0
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
