apps/99-test/whoami/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: whoami
