apps/99-test/whoami/base/cilium-networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: whoami
spec:
  endpointSelector:
    matchLabels:
      app: whoami
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
